[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuralg2p"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "python-Levenshtein>=0.12",
    "requests",
]

[tool.setuptools.package-dir]
"neuralg2p" = "neuralg2p-main"

[project.scripts]
g2p = "neuralg2p.infer:main"
